# taskhub

./: api.txt
taskhub-api/: .dockerignore  Dockerfile  README.md  app.py  database.py  migration.py  models.py  requirements.txt
taskhub-api/migrations/versions/: 0b241cb71c86_addorderforpagetasklist.py  1a0970ae24fd_addorderforimageandnote.py  2416717e32e6_addcardpostion.py  2ec37de23a3e_add_color_field_to_events.py  3e6652213aba_extend_collaboration_with_folderid_.py  5195c1c8bf1a_initial_migration.py  5281dd1c3c25_remove_pageid_from_url_add_folderid.py  68e8d556dd53_add_file_upload_fields_and_page_.py  74329b6c6b82_addo36file.py  80ee85ee803a_add_image_and_paymentdatetime.py  8d677b2f1266_files_upload_setup.py  8d8c2cde4ffb_.py  a10fd0827a4b_update_models_and_event_routes.py  a34483d8741b_add_card_entity.py  ac6accb2a541_add_createdfromtask_and_.py  ac928cf6cfac_add_card_connections_table.py  add_workspace_id_to_files.py  ba2d43bedb48_add_card_entity_name.py  (+4 more)
taskhub-api/routes/: routesAccount.py  routesCard.py  routesCollaboration.py  routesCompany.py  routesEvent.py  routesFile.py  routesFolder.py  routesHealth.py  routesImage.py  routesPage.py  routesSync.py  routesTask.py  routesTextBox.py  routesUrl.py  routesUser.py  routesVault.py  routesWorkspace.py
taskhub-api/tests/: README.md
taskhub-app-main/: README.md  taskhub.db
taskhub-app-main/taskhub/: PROJECT_ANALYSIS.md  package-lock.json  package.json  table-test.html
taskhub-app-main/taskhub/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
taskhub-app-main/taskhub/src-tauri/src/: lib.rs  main.rs
(+43 files in other folders)
