[package]
name = "taskhub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taskhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
base64 = { version = "0.22", features = ["alloc"] }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = "0.31.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
regex = "1"
anyhow = "1.0"
urlencoding = "1.3"
tauri-plugin-dialog = "2.0.0"
lazy_static = "1.4"
